添加菜单menu,整理代码